# SpaceHaven-Save-Editor

./: .gitignore  README.md  main.py  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: build-macos.yml  build-windows.yml  build.yml  tests-macos.yml  tests-windows.yml  tests.yml
scripts/: make_icns.py  make_ico.py  make_icons.py
src/: game_data.py  save_file.py  texts_loader.py
src/ui/: crew_tab.py  globals_tab.py  main_window.py  research_tab.py  sector_map_widget.py  ship_map_widget.py  ships_tab.py  storage_tab.py  styles.py  universe_tab.py  welcome_widget.py
tests/: helpers.py  test_save_file.py
tests/ui/: test_crew_tab.py  test_globals_tab.py  test_main_window.py  test_research_tab.py  test_ships_tab.py  test_storage_tab.py  test_universe_tab.py  test_welcome_widget.py
translations/: README.md  spacehaven_DE.qm  spacehaven_DE.ts
