[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spacehaven-save-editor"
version = "1.0.0"
description = "A cross-platform save game editor for Space Haven"
authors = [{name = "xLPMG", url = "https://github.com/xLPMG"}]
requires-python = ">=3.11"
dependencies = [
    "lxml==6.1.1",
    "PySide6-Essentials==6.11.1",
    "shiboken6==6.11.1",
]

[project.scripts]
spacehaven-save-editor = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
