[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spacehaven-save-editor"
version = "1.1.1"
description = "A cross-platform save game editor for Space Haven"
readme = "README.md"
authors = [{name = "xLPMG"}]
requires-python = ">=3.11"
dependencies = [
    "lxml==6.1.1",
    "PySide6-Essentials==6.11.1",
    "shiboken6==6.11.1",
]

[project.scripts]
spacehaven-save-editor = "main:main"

[project.urls]
Homepage = "https://github.com/xLPMG/SpaceHaven-Save-Editor"
Issues = "https://github.com/xLPMG/SpaceHaven-Save-Editor/issues"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.ui" = ["icons/*", "fonts/*"]
